--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <p>Introduction array</p>
             </div>
             <div class="col-2">
+                <p>function sample:  const ageCal = (x) => {
+                    return 2023 - x;
+                }</p>
                     <p>1. const friend = ['Bruce', 'Bea', 'Phil'];<br>
                         console.log(friend);<br>
                         console.log(friend[friend.length - 1])</p>
@@ -64,7 +67,7 @@ const answer  = [answ1, answ2, answ3]<br>
 console.log(answer);<br>
                         </p>
                     <h1 class="answer">Output: <span class="h1">Ans 1. (3) ['Bruce', 'Bea', 'Phil']</span>
-                      &nbsp; <span class="h1">Ans 2. (3) [1990, 1991, 1989]</span>  </h1>
+                      &nbsp; <span class="h1">Ans 2. [33, 31, 23]</span>  </h1>
             </div>
         </div>
 
