--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
        <section class="lecture-1">
-        <h2>Javascript</h2>
+        <h2 class="title-js">Javascript</h2>
         <div class="row">
             <div class="col-1">
                 <h1>lecture</h1>
