--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ console.log(answer);<br>
                 <p>Introduction Function + Array</p>
             </div>
             <div class="col-2">
-                    <p>const isSaving = [3,-2,-6-1, 'error', 9, 13, 17, 15, 14, 9, 5];<br><br>
+                    <p>1. const isSaving = [3,-2,-6-1, 'error', 9, 13, 17, 15, 14, 9, 5];<br><br>
 
                         const calTemp = (isSaving) => {<br>
                             let max = isSaving[0]<br>
@@ -227,8 +227,31 @@ console.log(answer);<br>
                         
                         calTemp([3, 7, 4, 1, 8])<br>
                         </p><br>
-                    <h1 class="answer">Output: <span class="h1">8 1</span>
-                      &nbsp; <span class="h1"></span>  </h1>
+
+
+
+                        <p>
+                          2.  const stateChange = (value) => {<br>
+                                let fare = 20;{<br>
+                                const change = value - fare{<br>
+                                return change{<br>
+                              }{<br>{<br>
+                              
+                              const isSales = (value) => {{<br>
+                                let change = [];{<br>
+                                for(let i = 0; i < value.length; i++){{<br>
+                                  change.push(stateChange(value[i]));{<br>
+                                }{<br>{<br>
+                                 const message = (`${change.length} passenger has change ${change}`);
+                                 console.log(message);{<br>
+                              }
+                              {<br>{<br>
+                              isSales([100, 200, 300, 300]);
+                        </p>
+
+
+                    <h1 class="answer">Output: <span class="h1">1. ans) 8, 1</span>
+                      &nbsp; <span class="h1">2.ans) 4 passenger has change 80,180,280,280</span>  </h1>
             </div>
         </div>
 
