--- a/index.html
+++ b/index.html
@@ -232,26 +232,26 @@ console.log(answer);<br>
 
                         <p>
                           2.  const stateChange = (value) => {<br>
-                                let fare = 20;{<br>
-                                const change = value - fare{<br>
-                                return change{<br>
-                              }{<br>{<br>
+                                let fare = 20;<br>
+                                const change = value - fare<br>
+                                return change<br>
+                              }<br><br>
                               
-                              const isSales = (value) => {{<br>
-                                let change = [];{<br>
-                                for(let i = 0; i < value.length; i++){{<br>
-                                  change.push(stateChange(value[i]));{<br>
-                                }{<br>{<br>
+                              const isSales = (value) => {<br>
+                                let change = [];<br>
+                                for(let i = 0; i < value.length; i++){<br>
+                                  change.push(stateChange(value[i]));<br>
+                                }<br><br>
                                  const message = (`${change.length} passenger has change ${change}`);
-                                 console.log(message);{<br>
-                              }
-                              {<br>{<br>
-                              isSales([100, 200, 300, 300]);
+                                 console.log(message);<br>
+                              }<br><br>
+                              
+                              isSales([100, 200, 300, 300]);<br>
                         </p>
 
 
-                    <h1 class="answer">Output: <span class="h1">1. ans) 8, 1</span>
-                      &nbsp; <span class="h1">2.ans) 4 passenger has change 80,180,280,280</span>  </h1>
+                    <h1 class="answer">Output: <span class="h1">ans 1.) 8 1</span>
+                      &nbsp; <span class="h1">ans 2.) 4 passenger has change 80,180,280,280</span>  </h1>
             </div>
         </div>
 
