--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@ console.log(answer);<br>
             <div class="col-1">
                 <h1>lecture</h1>
                 <p>Introduction Dom</p>
+                 <span class="links-title">Sample App:</span><a class="links" href="/app.html">Guess my number</a>
             </div>
             <div class="col-2">
 
