--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@ console.log(answer);<br>
             <div class="col-1">
                 <h1>lecture</h1>
                 <p>Introduction Dom</p>
-                 <span class="links-title">Sample App:</span><a class="links" href="/app.html">Guess my number</a>
+                 <span class="links-title">Sample App:</span><ul><li>
+                    <a class="links" href="/app.html">Guess my number</a>
+                 </li>
+                <li><a class="links" href="/modal.html">Modal</a></li></ul>
             </div>
             <div class="col-2">
 
