--- a/modal.html
+++ b/modal.html
@@ -12,22 +12,24 @@
         <header>
             <div class="box1">
                 <p>Show Message</p>
-                <button>Show</button>
+                <button class="btn">Show</button>
             </div>
             <div class="box1">
                 <p>Show Message</p>
-                <button>Show</button>
+                <button class="btn">Show</button>
             </div>
             <div class="box1">
                 <p>Show Message</p>
-                <button>Show</button>
+                <button class="btn">Show</button>
             </div>
         </header>
 
         <div class="modal-container">
             <div class="modal-box">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                <button>Close</button>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Quibusdam commodi cupiditate rerum 
+    voluptatibus iure voluptas! Corporis vitae delectus rem facilis.</p>
+                <button class="btnClose">Close</button>
             </div>
         </div>
     </main>
