--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
         
         <nav class="mainNav">
+        
             <ul class="list">
+                <h1 class="title-nav">Javascript</h1>
                 <li class="list-item"><a href="#home">home</a></li>
                 <li class="list-item"><a href="#array">array</a></li>
                 <li class="list-item"><a href="#object">object</a></li>
