--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ console.log(answer);<br>
             <div class="col-1" id="dom">
                 <h1>lecture</h1>
                 <p>Introduction Dom</p>
-                 <span class="links-title">Sample App:</span><ul><li>
+                 <span class="links-title">Sample App:</span><li>
                     <a class="links" href="/app.html">Guess my number</a>
                  </li>
                 <li><a class="links" href="/modal.html">Modal</a></li></ul>
