--- a/index.html
+++ b/index.html
@@ -419,6 +419,8 @@ btn.addEventListener('click',function(){<br>
                       
                     </tbody>
                     </table>
+                    <p class="description">Hoisting is a JavaScript mechanism where variables and function declarations are moved to the top of their scope before code execution. Inevitably, this means that no matter where functions and variables are declared, they are moved to the top of their 
+                        scope regardless of whether their scope is global or local.</p>
             </div>
             
         </div>
