--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="list-item"><a href="#loop">loop</a></li>
                 <li class="list-item"><a href="#While">while</a></li>
                 <li class="list-item"><a href="#dom">dom</a></li>
-                <li class="list-item"><a href="#fArray">function array</a></li>
+                <li class="list-item"><a href="#fArray">function-array</a></li>
                 <li class="list-item"><a href="#scope">scope</a></li>
                 <li class="list-item"><a href="#hoisting">hoisting</a></li>
                 <li class="list-item"><a href="#this">this</a></li>
