--- a/index.html
+++ b/index.html
@@ -527,14 +527,17 @@ btn.addEventListener('click',function(){<br>
         </div>
 
         <div class="row">
-            <div class="col-1">
-                <h1>lecture</h1>
-                <p>Introduction Loop</p>
-            </div>
             <div class="col-2">
-                    <p>
+                <h1>Destructuring Arrays Examples</h1>
+                    <p>const restaurant = {<br>
+                        order: function(starterIndex, mainIndex){<br>
+                          return [this.starterMenu[starterIndex], this.mainMenu[mainIndex]]<br>
+                        }<br>
+                      };<br><br>
+                      
+                      console.log(restaurant.order(2,0));<br>
                         </p>
-                    <h1 class="answer">Output: <span class="h1"></span>
+                    <h1 class="answer">Output: <span class="h1">(2) ['Garlic Bread', 'Pizza']</span>
                       &nbsp; <span class="h1"></span>  </h1>
             </div>
         </div>
