--- a/index.html
+++ b/index.html
@@ -536,9 +536,17 @@ btn.addEventListener('click',function(){<br>
                       };<br><br>
                       
                       console.log(restaurant.order(2,0));<br>
-                        </p>
-                    <h1 class="answer">Output: <span class="h1">(2) ['Garlic Bread', 'Pizza']</span>
-                      &nbsp; <span class="h1"></span>  </h1>
+                        </p><br>
+
+                    <p>
+                        const nested = [2,4, [5,6]]<br><br>
+
+
+                        const [i, , [j, k]] = nested;<br>
+                        console.log(i, j, k);<br>
+                    </p>
+                    <h1 class="answer">Output: <span class="h1">1.) (2) ['Garlic Bread', 'Pizza']</span>
+                      &nbsp; <span class="h1">2.) 2 5 6</span>  </h1>
             </div>
         </div>
 
