--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ btn.addEventListener('click',function(){<br>
                       console.log(restaurant.order(2,0));<br>
                         </p><br>
 
-                    <p>
+                    <p> Another Sample:<br>
                         const nested = [2,4, [5,6]]<br><br>
 
 
