--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <li class="list-item"><a href="#scope">scope</a></li>
                 <li class="list-item"><a href="#hoisting">hoisting</a></li>
                 <li class="list-item"><a href="#this">this</a></li>
-                <li class="list-item"><a href="#Destructuring">Destructuring</a></li>
+                <li class="list-item"><a href="#Destructuring">Destructuring-Array</a></li>
+                <li class="list-item"><a href="#ObjectD">Destructuring-Object</a></li>
+
                 
                 <div class="burger">
                     <div></div>
@@ -52,7 +54,8 @@
             <h2><a href="#scope">scope</a></h2>
             <h2><a href="#hoisting">hoisting</a></h2>
             <h2><a href="#this">this</a></h2>
-            <h2><a href="#Destructuring">Destructuring</a></h2>
+            <h2><a href="#Destructuring">Destructuring-Array</a></h2>
+            <h2><a href="#ObjectD">Destructuring-Object</a></h2>
         </div>
         
        <section class="lecture-1">
@@ -551,9 +554,9 @@ btn.addEventListener('click',function(){<br>
         </div>
 
         <div class="row">
-            <div class="col-1">
+            <div class="col-1" id="ObjectD">
                 <h1>lecture</h1>
-                <p>Introduction Loop</p>
+                <p>Introduction Object Destructuring</p>
             </div>
             <div class="col-2">
                     <p>
