--- a/index.html
+++ b/index.html
@@ -585,11 +585,11 @@ btn.addEventListener('click',function(){<br>
                         }<br>
                       };<br>
                       <br>
-                     Ans 1:  console.log(restaurant.openingHours);<br>
+                     Ans 1:  console.log(restaurant.openingHours);<br><br>
                       
                       const {name:restaurantName, <br>
                         openingHours: {...hours}, <br>
-                        categories:tags,} = restaurant<br>
+                        categories:tags,} = restaurant<br><br>
                         Ans 2: console.log(`Company Name: ${restaurantName}  menus: '${tags}' and schedule`, hours );<br>
                         </p>
                     <h1 class="answer">Output: <span class="h1"> Ans 1: {thu: {…}, fri: {…}, sat: {…}}</span>
