--- a/index.html
+++ b/index.html
@@ -592,12 +592,11 @@ btn.addEventListener('click',function(){<br>
                         categories:tags,} = restaurant<br><br>
                         Ans 2: console.log(`Company Name: ${restaurantName}  menus: '${tags}' and schedule`, hours );<br>
                         <br>
-                        Ans 3: <br><br>
                         const {menu =[], starterMenu: first=[]} = restaurant;
-                        console.log(menu, first);
+                        Ans 3:  console.log(menu, first);  <br>
                         </p>
                     <h1 class="answer">Output: <span class="h1"> Ans 1: {thu: {…}, fri: {…}, sat: {…}}</span>
-                      &nbsp; <span class="h1">Ans 2: Company Name: Classico Italiano  menus: 'Italian,Pizzeria,Vegetarian,Organic' and schedule {thu: {…}, fri: {…}, sat: {…}}</span>  </h1>
+                      &nbsp; <span class="h1">Ans 2: Company Name: Classico Italiano  menus: 'Italian,Pizzeria,Vegetarian,Organic' and schedule {thu: {…}, fri: {…}, sat: {…}}</span>  
                       &nbsp; <span class="h1">Ans 3: [] (4) ['Focaccia', 'Bruschetta', 'Garlic Bread', 'Caprese Salad']</span>  </h1>
             </div>
         </div>
