--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ btn.addEventListener('click',function(){<br>
                         categories:tags,} = restaurant<br><br>
                         Ans 2: console.log(`Company Name: ${restaurantName}  menus: '${tags}' and schedule`, hours );<br>
                         <br>
-                        const {menu =[], starterMenu: first=[]} = restaurant;
+                        const {menu =[], starterMenu: first=[]} = restaurant;  <br>
                         Ans 3:  console.log(menu, first);  <br>
                         </p>
                     <h1 class="answer">Output: <span class="h1"> Ans 1: {thu: {…}, fri: {…}, sat: {…}}</span>
