--- a/index.html
+++ b/index.html
@@ -596,8 +596,8 @@ btn.addEventListener('click',function(){<br>
                         Ans 3:  console.log(menu, first);  <br>
                         </p>
                     <h1 class="answer">Output: <span class="h1"> Ans 1: {thu: {…}, fri: {…}, sat: {…}}</span>
-                      &nbsp; <span class="h1">Ans 2: Company Name: Classico Italiano  menus: 'Italian,Pizzeria,Vegetarian,Organic' and schedule {thu: {…}, fri: {…}, sat: {…}}</span>  
-                      &nbsp; <span class="h1">Ans 3: [] (4) ['Focaccia', 'Bruschetta', 'Garlic Bread', 'Caprese Salad']</span>  </h1>
+                      &nbsp;  &nbsp; <span class="h1">Ans 2: Company Name: Classico Italiano  menus: 'Italian,Pizzeria,Vegetarian,Organic' and schedule {thu: {…}, fri: {…}, sat: {…}}</span>  
+                      &nbsp;   &nbsp;<span class="h1">Ans 3: [] (4) ['Focaccia', 'Bruschetta', 'Garlic Bread', 'Caprese Salad']</span>  </h1>
             </div>
         </div>
 
