--- a/index.html
+++ b/index.html
@@ -530,6 +530,9 @@ btn.addEventListener('click',function(){<br>
         </div>
 
         <div class="row">
+            <div class="col-1" id="Destructuring">
+             
+            </div>
             <div class="col-2">
                 <h1>Destructuring Arrays Examples</h1>
                     <p>const restaurant = {<br>
