--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ btn.addEventListener('click',function(){<br>
              
             </div>
             <div class="col-2">
-                <h1>Destructuring Arrays Examples</h1>
+                <h1 class="backspace">Destructuring Arrays Examples</h1>
                     <p>const restaurant = {<br>
                         order: function(starterIndex, mainIndex){<br>
                           return [this.starterMenu[starterIndex], this.mainMenu[mainIndex]]<br>
