--- a/index.html
+++ b/index.html
@@ -530,11 +530,9 @@ btn.addEventListener('click',function(){<br>
         </div>
 
         <div class="row">
-            <div class="col-1" id="Destructuring">
-             
-            </div>
+            
             <div class="col-2">
-                <h1 class="backspace">Destructuring Arrays Examples</h1>
+                <h1>Destructuring Arrays Examples</h1>
                     <p>const restaurant = {<br>
                         order: function(starterIndex, mainIndex){<br>
                           return [this.starterMenu[starterIndex], this.mainMenu[mainIndex]]<br>
