--- a/index.html
+++ b/index.html
@@ -530,9 +530,11 @@ btn.addEventListener('click',function(){<br>
         </div>
 
         <div class="row">
-            
-            <div class="col-2">
+            <div class="col-1" id="Destructuring">
                 <h1>Destructuring Arrays Examples</h1>
+            </div>
+            <div class="col-2">
+                
                     <p>const restaurant = {<br>
                         order: function(starterIndex, mainIndex){<br>
                           return [this.starterMenu[starterIndex], this.mainMenu[mainIndex]]<br>
