--- a/index.html
+++ b/index.html
@@ -614,10 +614,23 @@ btn.addEventListener('click',function(){<br>
             <div class="col-2">
                     <p>const arr = [7,8,9];<br>
                         const setArr = [1,2,3, ...arr]<br>
-                        console.log(setArr);<br>
+                       Ans 1.) console.log(setArr);<br>
                         </p>
-                    <h1 class="answer">Output: <span class="h1">(6) [1, 2, 3, 7, 8, 9]</span>
-                      &nbsp; <span class="h1"></span>  </h1>
+
+                        <p>
+                        const newFoods = [...restaurant.categories, 'Fish Tuna'];<br>
+                       Ans 2.) console.log(newFoods);<br><br>
+
+                        const statePerson = {<br>
+                        name:'bruce'<br>
+                        };<br><br>
+
+                        const setPerson = {...statePerson, hobbies:'basket ball'};<br><br>
+                       Ans 3.) console.log(setPerson);<br>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1">Ans 1.) (6) [1, 2, 3, 7, 8, 9]</span>
+                      &nbsp; <span class="h1">2.) ['Italian', 'Pizzeria', 'Vegetarian', 'Organic', 'Fish Tuna']</span>   
+                      &nbsp; <span class="h1"></span> &nbsp; <span class="h1">3.) {name: 'bruce', hobbies: 'basket ball'}</span></h1>
             </div>
         </div>
 
