--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ btn.addEventListener('click',function(){<br>
             <div class="col-2">
                     <p>const arr = [7,8,9];<br>
                         const setArr = [1,2,3, ...arr]<br>
-                       Ans 1.) console.log(setArr);<br>
+                       Ans 1.) console.log(setArr);<br><br>
                         </p>
 
                         <p>
@@ -623,9 +623,8 @@ btn.addEventListener('click',function(){<br>
 
                         const statePerson = {<br>
                         name:'bruce'<br>
-                        };<br><br>
-
-                        const setPerson = {...statePerson, hobbies:'basket ball'};<br><br>
+                        };<br>
+                        const setPerson = {...statePerson, hobbies:'basket ball'};<br>
                        Ans 3.) console.log(setPerson);<br>
                         </p>
                     <h1 class="answer">Output: <span class="h1">Ans 1.) (6) [1, 2, 3, 7, 8, 9]</span>
