--- a/index.html
+++ b/index.html
@@ -641,10 +641,27 @@ btn.addEventListener('click',function(){<br>
                 <p>Introduction Loop Arrays</p>
             </div>
             <div class="col-2">
-                    <p>
+                    <p>for(const item of menu) <br>
+                       Ans 1.) console.log(item);<br><br>
+                        
+                        for(const [item, product] of menu.entries()){<br>
+                         Ans 2.) console.log(`${item + 1}: ${product}`);<br>
+                        }<br>
                         </p>
-                    <h1 class="answer">Output: <span class="h1"></span>
-                      &nbsp; <span class="h1"></span>  </h1>
+                    <h1 class="answer">Output: <span class="h1">Ans1.) Focaccia
+                        Bruschetta,
+                         Garlic Bread,
+                         Caprese Salad,
+                         Pizza,
+                        Pasta,
+                        Risotto</span>
+                      &nbsp; <span class="h1">Ans2.)1: Focaccia
+                         2: Bruschetta,
+                        3: Garlic Bread,
+                        4: Caprese Salad,
+                        5: Pizza,
+                         6: Pasta,
+                         7: Risotto</span>  </h1>
             </div>
         </div>
 
