--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ btn.addEventListener('click',function(){<br>
                          Pizza,
                         Pasta,
                         Risotto</span>
-                      &nbsp; <span class="h1">Ans2.)1: Focaccia
+                      &nbsp;<br> <span class="h1">Ans2.)1: Focaccia
                          2: Bruschetta,
                         3: Garlic Bread,
                         4: Caprese Salad,
