--- a/index.html
+++ b/index.html
@@ -641,6 +641,17 @@ btn.addEventListener('click',function(){<br>
                 <p>Introduction Loop Arrays</p>
             </div>
             <div class="col-2">
+                    <p>
+                        const restaurant = {<br>
+                            starterMenu: ['Focaccia', 'Bruschetta', 'Garlic Bread', 'Caprese Salad'],<br>
+                            mainMenu: ['Pizza', 'Pasta', 'Risotto'],<br><br>
+
+                            
+                        const menu = [...restaurant.starterMenu, ...restaurant.mainMenu];<br><br>
+                    </p>
+
+
+
                     <p>for(const item of menu) <br>
                        Ans 1.) console.log(item);<br><br>
                         
