update object literals

--- a/index.html
+++ b/index.html
@@ -704,7 +704,8 @@ btn.addEventListener('click',function(){<br>
                         starterMenu: ['Focaccia', 'Bruschetta', 'Garlic Bread', 'Caprese Salad'],<br>
                         openingHours,<br>
                         order: (ing1, ing2, ing3) =>{<br>
-                          return console.log(`${restaurant.starterMenu[ing1]} nice ${restaurant.starterMenu[ing2]} nice nice ${restaurant.starterMenu[ing3]}`);<br>
+                          return console.log(`${restaurant.starterMenu[ing1]}<br>
+                           nice ${restaurant.starterMenu[ing2]} <br>nice nice ${restaurant.starterMenu[ing3]}`);<br>
                         }<br>
                       };<br><br>
                       
