--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ console.log(detail);
                         console.log(rest.get(true));<br>
                         </p>
                     <h1 class="answer">Output: <span class="h1">log 1: Map(4) {'name' => 'classico', 1 => 'fire', 'categories' => Array(4), true => 'we are open'}</span>
-                      &nbsp;  &nbsp;  &nbsp;  <span class="h1">log 2: we are open</span>  </h1>
+                     <br> <span class="h1">log 2: we are open</span>  </h1>
             </div>
         </div>
 
